<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="16dp"
    tools:context=".ui.CadastroContratanteFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/add_contratante"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:gravity="center_horizontal" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_nome_contratante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_nome_contratante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contratante_nome"
            android:inputType="textCapSentences"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_email_contratante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_email_contratante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contratante_email"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_senha_contratante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_senha_contratante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contratante_senha"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_add_contratante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/adicionar_contratante"
        android:textColor="@android:color/white" />



    </LinearLayout>
