<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginHorizontal="16dp"
    tools:context=".ui.LoginFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="100dp"
        android:fontFamily="sans-serif-medium"
        android:text="TinDev"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        android:gravity="center_horizontal" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contratante_email"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_senha_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_senha_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contratante_senha"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/login"
        android:textColor="@android:color/white" />
    <Button
        android:id="@+id/btn_cadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/cadastrar"
        android:padding="15dp"
        android:textColor="@android:color/white" />

</LinearLayout>